--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <html>
   <head>
     <meta charset='utf-8' />
-    <title>Electron App</title>
+    <title>Task Log</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Logger Task!</h1>
+    <button id="start">start</button>
+    <button id="stop" style="display: none;">stop</button>
+    <div id="timer">0</div>
+    <table id="table">
+      <tr>
+        <th>日時</th><th>時間</th>
+      </tr>
+    </table>
+    <script type="text/javascript" src="./dest/bundle.js"></script>
   </body>
 </html>
