レポート画面作成（雑）

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   </head>
   <body>
     <h1>Logger Task!</h1>
-    <button id="start">start</button>
-    <button id="stop" style="display: none;">stop</button>
+    <!-- <button id="start">start</button> -->
+    <!-- <button id="stop" style="display: none;">stop</button> -->
     <div id="timer">0</div>
     <table id="table">
       <tr>
-        <th>日時</th><th>時間</th>
+        <th></th><th colspan="2">タスク1</th><th colspan="2">タスク2</th><th colspan="2">タスク3</th><th></th>
+      </tr>
+      <tr>
+        <th>日時</th><th>時間</th><th>レート</th><th>時間</th><th>レート</th><th>時間</th><th>レート</th><th>合計</th>
       </tr>
     </table>
     <script type="text/javascript" src="./dest/bundle.js"></script>
